--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <div class="letter">a</div>
                 <div class="letter">r</div>
                 <div class="letter">t</div>
+                <div class="letter">t</div>
               </div>
             </div>
           </div>
