--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           </div>
           <div class="typing-area">
             <div class="words">
+              <div class="cursor-test"></div>
               <div class="word">
                 <div class="letter">P</div>
                 <div class="letter">r</div>
