cursor logic finished

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <span class="divider"></span>
             <div class="game-mode-settings">
               <button class="game-mode-setting">10</button>
-              <button class="game-mode-setting active">25</button>
-              <button class="game-mode-setting">50</button>
+              <button class="game-mode-setting">25</button>
+              <button class="game-mode-setting active">50</button>
               <button class="game-mode-setting">100</button>
             </div>
           </div>
           <div class="typing-area">
-            <div class="words">
+            <div class="words" style="top: 0px">
               <div class="word">
                 <div class="letter">P</div>
                 <div class="letter">r</div>
