--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           <div class="settings">
             <div class="game-modes">
               <button class="game-mode active">word</button>
-              <button class="game-mode">some setting</button>
+              <button class="game-mode">time</button>
             </div>
             <span class="divider"></span>
             <div class="game-mode-settings">
-              <button class="game-mode-setting">10</button>
+              <button class="game-mode-setting active">10</button>
               <button class="game-mode-setting">25</button>
-              <button class="game-mode-setting active">50</button>
+              <button class="game-mode-setting">50</button>
               <button class="game-mode-setting">100</button>
             </div>
           </div>
